Added Left button, connected Listview with an upper button

--- a/QtApplShrenamer/QtApplShrenamer.ui
+++ b/QtApplShrenamer/QtApplShrenamer.ui
@@ -28,6 +28,13 @@
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
+       <widget class="QPushButton" name="pushButtonLeftDir">
+        <property name="text">
+         <string>←</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButtonUpDir">
         <property name="minimumSize">
          <size>
