new tool button

--- a/QtApplShrenamer/QtApplShrenamer.ui
+++ b/QtApplShrenamer/QtApplShrenamer.ui
@@ -66,6 +66,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QToolButton" name="toolButton">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
