--- a/QtApplShrenamer/QtApplShrenamer.ui
+++ b/QtApplShrenamer/QtApplShrenamer.ui
@@ -21,7 +21,7 @@
        <widget class="QListView" name="listViewLeft"/>
       </item>
       <item>
-       <widget class="QTableView" name="tableView"/>
+       <widget class="QTableView" name="tableViewRight"/>
       </item>
      </layout>
     </item>
